--- a/report/Design/design.tex
+++ b/report/Design/design.tex
@@ -18,7 +18,7 @@ This chapter gives a brief overview of the features and classes of poetry that e
 To fully comprehend the task that we are about to undertake, we need to have an understanding of poetry as an art form. Poetry is believed to predate even literacy and has been documented ever since. Over the ages, different styles of poetry have evolved. Here we discuss those styles and the underlying reason for why poetry is written.
 
 \subsection{The Purpose of Poetry}
-
+\label{sec:purpose}
 Merriam-Webster dictionary defines poetry as:\\
 \emph{writing that formulates a concentrated imaginative awareness of experience in language chosen and arranged to create a specific emotional response through meaning, sound, and rhythm.}
 
@@ -261,6 +261,7 @@ Some of these poems are harder to read and generate than others, particularly in
 
 
 \section{Lessons from Related Work}
+\label{sec:related_work}
 This section looks at six important previous attempts at automatic poetry generation. They each have some aspect of investigation or experimentation that have influenced this project. However, each of these attempts has its limitations that we look to overcome in this project.
 
 \subsection{Actively Gather Inspiration}
@@ -488,6 +489,7 @@ Python's Natural Language Toolkit (NLTK)\cite{bird2009natural} is a suite of tex
 %http://www.postgradolinguistica.ucv.cl/dev/documentos/49,578,Noam%20Chomsky%20-%20Syntactic%20Structure.pdf
 
 \subsection{Semantics and Pragmatics}
+\label{sec:semantics}
 Chomsky used the famous example \textit{'Colourless green ideas sleep furiously'} to show that a valid grammatical syntax can be completely nonsensical\cite{chomsky2002syntactic}. This illustrates the importance of the study of semantics, the meaning of words and phrases, as well as pragmatics, the way context affects semantics. Suppose the context around Chomsky's example was a person with old (black-and-white, colourless) ideas of making money (green) that he wants to bring back (was put to sleep, but not peacefully), then this line would make some sense in a poetic way.
 
 This is yet another major challenge for poetry generation. Poems are concise but have many layers of meaning that are subtle even to human readers and that only the best of poets can fully control. The different categories of poems each have their own pragmatics and there is always a fundamental message and purpose supporting these layers meaning. Veale argues that 'poetic licence' is not a licence but a contract that allows a speaker to take liberties in language in exchange for real insight\cite{veale2013less}. We must be careful not to abuse this by slewing unrelated words together and expecting the reader to do the work of finding meaning and context.
