--- a/report/report.tex
+++ b/report/report.tex
@@ -128,7 +128,7 @@
 \include{Design/design}
 \include{Theory/theory}
 \include{Implementation/implementation}
-%\include{Management/management}
+\include{Management/management}
 \include{Evaluation/evaluation}
 %\include{Conclusions/conclusions}
 
