Generating simple sentences section

--- a/report/Design/design.tex
+++ b/report/Design/design.tex
@@ -509,7 +509,7 @@ However, the GMB project is still in early stages and has only annotated open li
 \begin{itemize}
 \item{\textit{WordNet}: a lexical database that provides hierarchical, conceptual-semantic and lexical relations of 155,287 English words.\cite{miller1995wordnet}}
 \item{\textit{VerbNet}: a lexical database that groups verbs by semantic and syntactic linking behaviour.\cite{schuler2005verbnet}}
-\item{\textit{FrameNet}: a lexicon with framing semantics to define and constrain the building of phrases around individual words.\cite{baker1998berkeley}}
+\item{\textit{FrameNet}: a lexicon with framing semantics to define and constrain the building of clauses around individual words.\cite{baker1998berkeley}}
 \item{\textit{ACE}: a classification of names, places and other proper nouns for Named Entity Recognition.\cite{doddington2004automatic}}
 \item{\textit{PropBank}: an annotated corpus a million words defining and providing argument role labels for verbs\cite{kingsbury2002treebank}}
 \item{\textit{NomBank}: similar to PropBank, but for nouns instead of verbs.\cite{meyers2004nombank}}
@@ -560,6 +560,7 @@ In poetry, like any text, we can use this to analyse the semantics and pragmatic
 Need some stuff here. Probably remove the DRT section as well.
 
 \subsection{Natural Language Generation}
+\label{sec:bg-nlg}
 Natural Language Generation is the term for putting some non-linguistic form of content into understandable text in a human language. Reiter and Dale give the framework\cite{reiter2000building} illustrated in figure \ref{fig:nlg} for the process of generating natural language.
 
 \begin{figure}[h!]
